--- a/templates/stat/stats_user.html.twig
+++ b/templates/stat/stats_user.html.twig
@@ -3,9 +3,7 @@
 {% block title %}New Stat{% endblock %}
 
 {% block body %}
-    <h1>Create new Stat</h1>
+    <h1>Ajouter des stats</h1>
 
     {{ include('stat/_form.html.twig') }}
-
-    <a href="{{ path('app_stats_admin') }}">back to list</a>
 {% endblock %}
